fixed social media icon spacing on contact page. moved twitter icon on footer bar on all pages.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body
     background-color: #ADD8E6;
 }
 
-#name-title, td, #form
+#name-title, td
 {
     text-align: center;
 }
@@ -31,8 +31,8 @@ body
 #social-media a
 {
     color: silver;
-    margin-left: 25px;
-    margin-right: :25px;
+    margin-left: 5px;
+    margin-right: :45px;
 }
 
 .content-title
